--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
 index.html
-<h1> Poesia 
+
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</title> Doce Poesia </title>
+    <link rel="stylesheet" href="">
+</head> Uma página encatadora </head>
+<body>
+     <h1>Poesia </h1>
+</body>
+</html>
