--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@ index.html
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-</title> Doce Poesia </title>
     <link rel="stylesheet" href="">
-</head> Uma página encatadora </head>
+</title> Doce Poesia </title>
+    </head> Uma página encatadora </head>
+    <h1>Poesia </h1>
 <body>
      <h1>Poesia </h1>
 </body>
